test/pass/atom_minus.j
class A {
    Void main() { return a - a; }
}
