test/fail/parsing_error_method_name_uppercase.j
class A {
  Void main() {
      Int asd;
      return 1;
  }
}

class Dummy {
  Void Asd() {
    return 1;
  }
}
